# cover-uploady

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
cover-uploady/: __main__.py
